--- a/static/main.css
+++ b/static/main.css
@@ -253,3 +253,9 @@ text-align: center;
 .list-style-none{
     list-style: none;
     }
+/* end product page styling */
+
+.security-qns{
+    font-size:14px;
+    }
+
