--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,34 @@
 {% extends "base.html" %}
 {% from "formhelper.html" import render_field %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container signin" action="{{url_for('login')}}">
-        {{ form.csrf_token }}
-        <div class="form-group col">
-            <h2>Login</h2>
-        </div>
-        <div class="form-group col">
-            {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
-        </div>
-        <div class="form-group col">
-            {{render_field(form.password, class="form-control", placeholder="secret")}}
-        </div>
-        {% if error %}
-            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Either the email or password is wrong.</p>
-        {% endif %}
-        <div class="text-center">
-            <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign In</button>
-        </div>
-    </form>
+<form method="post" class="swoy-container signin" action="{{url_for('login')}}">
+    {{ form.csrf_token }}
+    <div class="form-group col">
+        <h2>Login</h2>
+    </div>
+    <div class="form-group col">
+        {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
+    </div>
+    <div class="form-group col">
+        {{render_field(form.password, class="form-control", placeholder="secret")}}
+    </div>
+    {% if error %}
+    <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Either the email or
+        password is wrong.</p>
+    {% endif %}
+    <div class="text-center">
+        <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign In</button>
+    </div>
+    <div style="padding-top:10px;">
+        <a href="/forgot_password" class="security-qns"> Forgot your password? </a>
+    </div>
+</form>
 
 {% endblock %}
