--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,34 +1,41 @@
 {% extends "base.html" %}
 {% from "formhelper.html" import render_field %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container signup" action="{{url_for('signup')}}">
-        {{ form.csrf_token }}
-        <div class="form-group col">
-            <h2>Sign up</h2>
-        </div>
-        <div class="form-group col">
-            {{render_field(form.username, class="form-control", placeholder="Tom")}}
-        </div>
-        <div class="form-group col">
-            {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
-        </div>
-        <div class="form-group col">
-            {{render_field(form.password, class="form-control", placeholder="secret")}}
-        </div>
-        <div class="form-group col">
-            {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
-        </div>
-        <div class="text-center">
-            <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign Up</button>
-        </div>
-    </form>
+<form method="post" class="swoy-container signup" action="{{url_for('signup')}}">
+    {{ form.csrf_token }}
+    <div class="form-group col">
+        <h2>Sign up</h2>
+    </div>
+    <div class="form-group col">
+        {{render_field(form.username, class="form-control", placeholder="Tom")}}
+    </div>
+    <div class="form-group col">
+        {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
+    </div>
+    <div class="form-group col">
+        {{render_field(form.password, class="form-control", placeholder="secret")}}
+    </div>
+    <div class="form-group col">
+        {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
+    </div>
+    <div class="form-group col">
+        {{render_field(form.security_qns, class="form-control")}}
+    </div>
+    <div class="form-group col">
+        {{render_field(form.security_ans, class="form-control")}}
+    </div>
+
+    <div class="text-center">
+        <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign Up</button>
+    </div>
+</form>
 
 {% endblock %}
 
