--- a/static/main.css
+++ b/static/main.css
@@ -152,15 +152,17 @@ a.article-title:hover {
     margin-top: 20px;
     }
 
+
 .signup, .signin{
     border-radius: 10px;
-    width: 400px;
+    width: 2000px;
     padding: 30px;
     padding-bottom: 50px;
     margin: auto;
     margin-top: 100px;
     margin-bottom: 100px;
 }
+/* YOU LIKE IT BIG RIGHT */
 
 #details{
     border: 2px solid grey;
