--- a/templates/update_password.html
+++ b/templates/update_password.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container signin" action="{{url_for('security_question', email=email)}}">
+    <form method="post" class="swoy-container signin" action="{{url_for('forgot_password_change', email=email)}}">
         {{ form.csrf_token }}
         <div class="form-group col">
-            <h2>Your Security Question:</h2>
+            <h2>Update Your Password</h2>
         </div>
         <div class="form-group col">
-             <p>{{ security_qn }}</p>
+            {{render_field(form.new_pwd, class="form-control")}}
         </div>
         <div class="form-group col">
-            {{render_field(form.security_ans, class="form-control")}}
+            {{render_field(form.confirm_new_pwd, class="form-control")}}
         </div>
         {% if error %}
             <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Oops. Something went wrong.</p>
