--- a/static/main.css
+++ b/static/main.css
@@ -152,7 +152,7 @@ a.article-title:hover {
     margin-top: 20px;
     }
 
-
+/*
 .signup, .signin{
     border-radius: 10px;
     width: 1000px;
@@ -162,7 +162,7 @@ a.article-title:hover {
     margin-top: 100px;
     margin-bottom: 100px;
 }
-
+*/
 
 #details{
     border: 2px solid grey;
