--- a/templates/login.html
+++ b/templates/login.html
@@ -8,27 +8,34 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-<form method="post" class="swoy-container signin" action="{{url_for('login')}}">
-    {{ form.csrf_token }}
-    <div class="form-group col">
-        <h2>Login</h2>
+<div>
+    <div style="margin: 100px;">
+        <div class="container-fluid swoy-container transaction-details-container">
+            <form method="post" class="swoy-container" action="{{url_for('login')}}">
+                {{ form.csrf_token }}
+                <div class="form-group col">
+                    <h2>Login</h2>
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.password, class="form-control", placeholder="secret")}}
+                </div>
+                {% if error %}
+                <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Either the
+                    email or
+                    password is wrong.</p>
+                {% endif %}
+                <div class="text-center">
+                    <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign In</button>
+                </div>
+                <div style="padding-top:10px;">
+                    <a href="/forgot_password" class="security-qns"> Forgot your password? </a>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="form-group col">
-        {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
-    </div>
-    <div class="form-group col">
-        {{render_field(form.password, class="form-control", placeholder="secret")}}
-    </div>
-    {% if error %}
-    <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Either the email or
-        password is wrong.</p>
-    {% endif %}
-    <div class="text-center">
-        <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign In</button>
-    </div>
-    <div style="padding-top:10px;">
-        <a href="/forgot_password" class="security-qns"> Forgot your password? </a>
-    </div>
-</form>
+</div>
 
 {% endblock %}
