--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,34 +8,41 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-<form method="post" class="swoy-container signup" action="{{url_for('signup')}}">
-    {{ form.csrf_token }}
-    <div class="form-group col">
-        <h2>Sign up</h2>
-    </div>
-    <div class="form-group col">
-        {{render_field(form.username, class="form-control", placeholder="Tom")}}
-    </div>
-    <div class="form-group col">
-        {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
-    </div>
-    <div class="form-group col">
-        {{render_field(form.password, class="form-control", placeholder="secret")}}
-    </div>
-    <div class="form-group col">
-        {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
-    </div>
-    <div class="form-group col">
-        {{render_field(form.security_qns, class="form-control")}}
-    </div>
-    <div class="form-group col">
-        {{render_field(form.security_ans, class="form-control")}}
-    </div>
+<div>
+    <div style="margin: 100px;">
+        <div class="container-fluid swoy-container transaction-details-container">
+            <form method="post" class="swoy-container" action="{{url_for('signup')}}">
+                {{ form.csrf_token }}
+                <div class="form-group col">
+                    <h2>Sign up</h2>
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.username, class="form-control", placeholder="Tom")}}
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.password, class="form-control", placeholder="secret")}}
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.security_qns, class="form-control")}}
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.security_ans, class="form-control")}}
+                </div>
 
-    <div class="text-center">
-        <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign Up</button>
+                <div class="text-center">
+                    <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign Up</button>
+                </div>
+            </form>
+        </div>
     </div>
-</form>
+</div>
+
 
 {% endblock %}
 
