--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -42,9 +42,15 @@
                     </a>
                 </div>
                 <div class="user-info">
+                    {% if user_account %}
+                    <a href="{{ url_for('admin_own_account', user_id=2) }}">
+                        <span class="user-name" style="color:lightgray;">{{ user_account[1] }}</span>
+                    </a>
+                    {% else %}
                     <a href="{{ url_for('admin_own_account', user_id=2) }}">
                         <span class="user-name" style="color:lightgray;">John Smith</span>
                     </a>
+                    {% endif %}
                     <span class="user-role">Administrator</span>
                 </div>
             </div>
