--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link href="../static/hamburgers.css" rel="stylesheet">
-    <link rel="shortcut icon" href="static\favicon.ico"/>
+    <link rel="shortcut icon" href="../../../static/favicon.ico"/>
     <title>SWOY Bubble Tea</title>
 </head>
 
@@ -23,7 +23,11 @@
 
 <body>
 <nav class="navbar navbar-expand-lg row" style="background:#E7F3FC;">
-    <a href="/home"> <img class="navbar-brand responsive" src="static\cover.png"/></a>
+    {% if user_account %}
+        <a href="/home?id={{ user_account[0] }}"> <img class="navbar-brand responsive" src="../../../static/cover.png"/></a>
+    {% else %}
+        <a href="/home"> <img class="navbar-brand responsive" src="../../../static/cover.png"/></a>
+    {% endif %}
     <!--    <button class="" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
     <!--            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"-->
     <!--            style="border: none; outline: none;">-->
@@ -55,15 +59,29 @@
                             class="fas fa-search"></i></button>
                 </form>
             </div>
-            <li class="nav-item active">
-                <!-- Button trigger modal -->
-                <a href="/login">
-                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Log in</button>
-                </a>
-            </li>
-            <li><a href="/signup">
-                <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign up</button>
-            </a></li>
+            {% if user_account %}
+                <li class="nav-item active">
+                    <a href="#">
+                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0">{{ user_account[1] }}</button>
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a href="/home">
+                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Log out</button>
+                    </a>
+                </li>
+            {% else %}
+                <li class="nav-item active">
+                    <a href="/login">
+                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Log in</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="/signup">
+                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign up</button>
+                    </a>
+                </li>
+            {% endif %}
             <li><a href="/cart">
                 <button class="btn btn-navbar swoy-btn my-2 my-sm-0"><i class="fa fa-shopping-bag"></i> Cart</button>
             </a>
