--- a/templates/forgot_password_EMAIL.html
+++ b/templates/forgot_password_EMAIL.html
@@ -8,20 +8,26 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container signin" action="{{url_for('forgot_password')}}">
-        {{ form.csrf_token }}
-        <div class="form-group col">
-            <h2>Your email:</h2>
+<div>
+    <div style="margin: 100px;">
+        <div class="container-fluid swoy-container transaction-details-container">
+            <form method="post" class="swoy-container" action="{{url_for('forgot_password')}}">
+                {{ form.csrf_token }}
+                <div class="form-group col">
+                    <h2>Your email:</h2>
+                </div>
+                <div class="form-group col">
+                    {{render_field(form.email, class="form-control")}}
+                </div>
+                {% if error %}
+                    <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error }}</p>
+                {% endif %}
+                <div class="text-center">
+                    <button type="submit" class="swoy-btn btn btn-primary btn-block">Submit</button>
+                </div>
+            </form>
         </div>
-        <div class="form-group col">
-            {{render_field(form.email, class="form-control")}}
-        </div>
-        {% if error %}
-            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Oops. Something went wrong.</p>
-        {% endif %}
-        <div class="text-center">
-            <button type="submit" class="swoy-btn btn btn-primary btn-block">Submit</button>
-        </div>
-    </form>
+    </div>
+</div>
 
 {% endblock %}
