More fixes more missing codes

--- a/templates/searchbar.html
+++ b/templates/searchbar.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="wrapper">
     <div class="search-box">
-        <input type="text" placeholder="Search" class="input">
+        <input type="text" placeholder="Searchinggg" class="input">
 
     </div>
 </div>
