--- a/templates/base.html
+++ b/templates/base.html
@@ -44,17 +44,22 @@
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="text-align: center;">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="navbar-links" href="/product">Browse our menu<span class="sr-only">(current)</span></a>
-            </li>
+<!--        <ul class="navbar-nav mr-auto">-->
+<!--            <li class="nav-item active">-->
+<!--                <a class="navbar-links" href="/product">Browse our menu<span class="sr-only">(current)</span></a>-->
+<!--            </li>-->
 
-        </ul>
+<!--        </ul>-->
+        <ul class="navbar-nav mr-auto"></ul>
         <ul class="navbar-nav" style="margin-right:30px;">
             <div class="search-box">
-                <form class="">
-                    <input class="mr-sm-2 input-search" type="text" placeholder="Search" aria-label="Search"
+                <form method="GET" action="{{ url_for('home') }}">
+
+                    <input class="mr-sm-2 input-search" type="text" name="search" placeholder="Search" aria-label="Search"
                            style="text-align:middle">
+                    {% if user_account %}
+                    <input type="hidden" name="id" value="{{ user_account[0] }}">
+                    {% endif %}
                     <button class="btn btn-navbar swoy-btn my-2 my-sm-0" type="submit" style="border-radius:50%;"><i
                             class="fas fa-search"></i></button>
                 </form>
@@ -62,7 +67,7 @@
             {% if user_account %}
                 <li class="nav-item active">
                     <a href="#">
-                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0">{{ user_account[1] }}</button>
+                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0">{{ user_account[1]|safe }}</button>
                     </a>
                 </li>
                 <li class="nav-item active">
