--- a/templates/home.html
+++ b/templates/home.html
@@ -1,27 +1,50 @@
 {% extends "base.html" %}
 {% block content %}
 <main class="container">
+    {% if search %}
+    <div class="row" style="margin-top:20px;">
+        <div class="col-md-12">
+            <article class="media content-section" style="background-color:white;">
+                <div class="media-body" style="padding-top:10px;">
+                    <h1>Searched for - {{ search|safe }}</h1>
+                </div>
+            </article>
+        </div>
+    </div>
+    {% endif %}
     <div class="row">
         {% for item in drink_list %}
         <div class="col-md-4">
             <article class="media content-section">
                 <div class="media-body">
                     <div class=" swoy-card card" style="">
-                        <img class="card-img-top responsive" src="../static/{{ item.image }}" alt="Card image cap">
-                        <div class="card-body">
-                            <span class="card-text product-caption">{{ item.name|safe }}</span>
-                            <span style="float:right;">$ {{ item.price }}</span>
-                        </div>
-                        <div class="text-center">
-                            <a href="/checkout"><button class="btn btn-primary swoy-btn" style="margin:10px;">Add to Cart</button></a>
-                        </div>
+                        <a href="{{ url_for('product', id=user_account[0] ,drink_name=item.name) }}" style="text-decoration:none;">
+                            <img class="card-img-top responsive" src="../static/{{ item.image }}" alt="Card image cap">
+                            <div class="card-body" style="color:black;">
+                                <span class="card-text product-caption">{{ item.name|safe }}</span>
+                                <span style="float:right;">$ {{ item.price }}</span>
+                            </div>
+                            <div class="text-center">
+                                <a href="/checkout"><button class="btn btn-primary swoy-btn" style="margin:10px;">Add to Cart</button></a>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </article>
         </div>
-
         {% endfor %}
     </div>
+    {% if search %}
+    <div class="row">
+        <div class="col-md-12">
+            <article class="media content-section" style="color:white;">
+                <div class="media-body" style="padding-top:10px;">
+                    <h1>{{ drink_list|length }} result(s) found</h1>
+                </div>
+            </article>
+        </div>
+    </div>
+    {% endif %}
 </main>
 
 {% endblock %}
