--- a/templates/home.html
+++ b/templates/home.html
@@ -28,10 +28,9 @@
                                 <span class="card-text product-caption">{{ item.name|safe }}</span>
                                 <span style="float:right;">$ {{ item.price }}</span>
                             </div>
-                            <div class="text-center">
-                                <a href="/checkout"><button class="btn btn-primary swoy-btn" style="margin:10px;">Add to Cart</button></a>
-                            </div>
-                        </a>
+<!--                            <div class="text-center">-->
+<!--                                <a href="/checkout"><button class="btn btn-primary swoy-btn" style="margin:10px;">Add to Cart</button></a>-->
+<!--                            </div>-->
                     </div>
                 </div>
             </article>
