--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
                     </a>
                 </li>
             {% endif %}
-            <li><a href="/cart">
+            <li><a href="{{ url_for('cart') }}">
                 <button class="btn btn-navbar swoy-btn my-2 my-sm-0"><i class="fa fa-shopping-bag"></i> Cart</button>
             </a>
 
