--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,10 +23,10 @@
                     {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
                 </div>
                 <div class="form-group col">
-                    {{render_field(form.password, class="form-control", placeholder="secret")}}
+                    {{render_field(form.password, class="form-control", placeholder="at least 8 characters, contain at least 1 symbol (@, $, !, %, *, #, ?, &), at least 1 uppercase, at least 1 lowercase")}}
                 </div>
                 <div class="form-group col">
-                    {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
+                    {{render_field(form.confirm, class="form-control", placeholder="at least 8 characters, contain at least 1 symbol (@, $, !, %, *, #, ?, &), at least 1 uppercase, at least 1 lowercase")}}
                 </div>
                 <div class="form-group col">
                     {{render_field(form.security_qns, class="form-control")}}
@@ -36,6 +36,9 @@
                 </div>
                 {% if error %}
                 <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error }}</p>
+                {% endif %}
+                {% if error_password %}
+                <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error_password }}</p>
                 {% endif %}
                 <div class="text-center">
                     <button type="submit" class="swoy-btn btn btn-primary btn-block">Sign Up</button>
