--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -28,7 +28,7 @@
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
-                <a href="{{ url_for('admin_dashboard') }}">ADMIN SIDEBAR</a>
+                <a href="{{ url_for('home') }}">SWOY HOMEPAGE</a>
                 <div id="close-sidebar">
                     <i class="fas fa-times"></i>
                 </div>
