- fixed persisting username in login button - hover dropdown menu for login/username - change username feature

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-8">
         <div style="margin-left: 30px;">
-            <div class="container-fluid swoy-container transaction-details-container">
+            <div class="container-fluid swoy-container swoy-form-container">
                 <h1>Transaction Details</h1>
                 <form>
                     <div class="form-group">
