--- a/templates/product.html
+++ b/templates/product.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-6">
         <div style="margin-left: 30px;">
-            <div class="container-fluid swoy-container transaction-details-container">
+            <div class="container-fluid swoy-container swoy-form-container">
 
                 <h1> {{ drink[1] }} </h1>
                 <img src="../static/{{ drink[3] }}" style="max-width: 500px;" class="responsive">
