--- a/templates/update_password.html
+++ b/templates/update_password.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div>
     <div style="margin: 100px;">
-        <div class="container-fluid swoy-container transaction-details-container">
+        <div class="container-fluid swoy-container swoy-form-container">
             <form method="post" class="swoy-container" action="{{url_for('forgot_password_change', email=email)}}">
                 {{ form.csrf_token }}
                 <div class="form-group col">
