--- a/static/main.css
+++ b/static/main.css
@@ -246,12 +246,13 @@ text-align: center;
 
 /* end product item card */
 /* checkout stylings */
-.transaction-details-container, .order-details-container{
+.swoy-form-container, .order-details-container{
     border: 2px solid grey;
     border-radius: 10px;
     padding: 30px;
     margin: 20px;
     margin-bottom: 100px;
+    color: #253D52;
     }
 /* end checkout stylings */
 
@@ -269,3 +270,209 @@ text-align: center;
     font-size:14px;
     }
 
+/* this is for logged in username dropdown menu */
+.dropbtn {
+    background-color: transparent;
+    border-color: #253d52;
+  	cursor: pointer;
+}
+
+.dropdown-user {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #253d52;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-user:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-user:hover .dropbtn {
+  background-color: #253d52;
+   color: white;
+}
+/* end logged in username dropdown menu */
+
+.swoy-mini-text{
+    color: #007DE8;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: .5px;
+    line-height: 12px;
+    text-transform: uppercase;
+    margin-bottom: 22px;
+    padding-bottom: 6px;
+    border-bottom: 2px solid #253d52;
+}
+
+.profile-label{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.profile-data{
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-weight: 400;
+    color: #007DE8;
+    font-size: 16px;
+    line-height: 16px;
+}
+
+.profile-row{
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    margin-bottom: 28px;
+}
+
+.change-button-flex{
+    -ms-flex-align: center;
+    align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+
+.flex-button-right {
+    float: right;
+    position: relative;
+    }
+
+
+.change-btn {
+    color: #253D52;
+    background-color: transparent;
+    border: 1px solid #253D52;
+    border-radius: 4px;
+    box-sizing: border-box;
+    text-align: center;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: .5px;
+    line-height: 24px;
+    text-transform: uppercase;
+    padding: 3px 16px;
+}
+
+.change-btn:hover{
+    color: white;
+    background-color: #253d52;
+    border-color: #253d52;
+    transition: all 0.3s ease;
+    }
+
+/* account preferences stylings */
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  border-radius: 4px;
+  background-color: rgb(0,0,0);
+  background-color: rgba(28,28,28,.9);
+  box-shadow: 0 2px 20px 0 rgba(0,0,0,.3);
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #E7F3FC;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+
+}
+
+/* The Close Button */
+.close {
+    height: 20px;
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    width: 20px;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* end modal */
+
+.modal-form-input{
+    box-sizing: border-box;
+    color: black;
+    height: 50px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.fa-envelope-circle{
+    margin-right:8px;
+    margin-bottom: 12px;
+    align-items: center;
+    display: flex;
+    background: rgba(36,160,237,.2);
+    border-radius: 50%;
+    fill: #24a0ed;
+    height: 48px;
+    justify-content: center;
+    width: 48px;
+}
+
+.update-username-title{
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+.update-username-info{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 8px;
+}
+
+.save-changes-btn{
+    align-items: center; display: flex; flex-flow: row nowrap; justify-content: flex-end;
+}
