--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-11">
         <div style="margin-left: 80px;">
-            <div class="container-fluid swoy-container transaction-details-container">
+            <div class="container-fluid swoy-container swoy-form-container">
                 <table class="table table-striped">
                     <thead>
                     <tr>
