--- a/templates/product.html
+++ b/templates/product.html
@@ -21,7 +21,7 @@
 
     <div class="col-md-5">
         <div style="margin-left: 30px;">
-            <div class="container-fluid swoy-container transaction-details-container">
+            <div class="container-fluid swoy-container swoy-form-container">
                 <h5> Choice of Toppings: </h5>
                 <form method="POST" action="{{ url_for('add_cart_item', drink_id=drink[0], user_id=user_account[0]) }}">
                     <ul>
@@ -57,7 +57,7 @@
     </div>
     <div class="col-md-6" id="comments">
         <div style="margin-left: 30px; margin-top:-100px;">
-            <div class="container-fluid swoy-container transaction-details-container">
+            <div class="container-fluid swoy-container swoy-form-container">
                 <h5> Comments ({{ comment_list|length }}) </h5>
                 <hr>
                 {% for comment in comment_list %}
